--- a/backend/runs/detect/args.yaml
+++ b/backend/runs/detect/args.yaml
@@ -2,21 +2,21 @@ task: detect
 mode: train
 model: yolov8n.pt
 data: D:/bishe/Fallen.v2i.yolov8/data.yaml
-epochs: 100
+epochs: 50
 time: null
 patience: 100
 batch: 16
-imgsz: 640
+imgsz: 160
 save: true
 save_period: -1
-cache: false
+cache: true
 device: null
-workers: 8
+workers: 4
 project: d:\falldetection\backend\runs
 name: detect
 exist_ok: true
 pretrained: true
-optimizer: auto
+optimizer: Adam
 verbose: true
 seed: 0
 deterministic: true
@@ -70,7 +70,7 @@ simplify: true
 opset: null
 workspace: null
 nms: false
-lr0: 0.01
+lr0: 0.0121
 lrf: 0.01
 momentum: 0.937
 weight_decay: 0.0005
